<resources>
    <string name="app_name">Fragments</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kullanici_adi">Username: "</string>
    <string name="sifre">Password: "</string>
    <string name="helper_text_name">Username must be at least 6 characters. </string>
    <string name="helper_text_password">Password must be at least 6 characters. </string>
    <string name="password">Password</string>
    <string name="save_button">Save</string>
    <string name="user_name">Username</string>
    <string name="update_button">Update</string>
    <string name="add_user">Add User</string>
    <string name="empty_error_message">Please enter username!</string>
    <string name="empty_error_message_password">Please enter password!!</string>
    <string name="size_error_message">Username must be at least 6 characters.</string>
    <string name="size_error_message_password">Password must be at least 6 characters.</string>
    <string name="users">Users</string>
    <string name="delete_alert_message">Are you sure you want to delete?</string>
    <string name="delete_alert">Delete</string>
    <string name="yes_alert">Yes</string>
    <string name="cancel_alert">Cancel</string>
    <string name="none_users_message">NONE USERS</string>
    <string name="edit_user">Edit User</string>
    <string name="user_edited_message">User Edited</string>
    <string name="ok_message">Okey</string>
    <string name="birth_date">Birth Date: "</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="user_size">Size: </string>
    <string name="user_kilos">Kilos: </string>
    <string name="hi">Hi</string>
    <string name="welcome">Welcome to the app...</string>
    <string name="register_text">Register</string>
    <string name="login_text">Login</string>
    <string name="new_account_text">Create a new Account</string>
    <string name="username_text">Username</string>
    <string name="have_an_account">Already have an Account? Login</string>
    <string name="delete_account">Delete Account</string>
    <string name="exit">Exit</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="saved">It saved.</string>
    <string name="updated">Updated</string>
    <string name="age">Age</string>
    <string name="school">School</string>
    <string name="job">Job</string>
    <string name="profile_photo_error_message">Please add Profile photo.</string>
    <string name="homepage">Home Page</string>
    <string name="invalid_email_message">Invalid Email address, please enter in "abc@example.com" format.</string>
    <string name="empty_text">This field cannot be left blank</string>
    <string name="update_info_text">Please update the information.</string>
    <string name="add_photo_from_camera">Add Photo From Camera</string>
    <string name="add_photo_from_gallery">Add Photo From Gallery</string>


</resources>