<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UpdateUserFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_cardView"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarUpdate">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_editText"
                android:hint="@string/user_name"
                android:paddingTop="@dimen/padding_editText"
                android:textColorHint="#fff"
                app:boxStrokeColor="@color/white"
                app:errorEnabled="true"
                app:helperText="@string/helper_text_name"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_color"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_editText"
                android:layout_marginTop="@dimen/margin_editText"
                android:layout_marginRight="@dimen/margin_editText"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:errorEnabled="true"
                app:helperText="@string/helper_text_password"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_color"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white"
                    android:textStyle="bold"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/textSize_medium"
                android:layout_margin="@dimen/margin_button"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_size"
                android:textSize="@dimen/textSize_medium"
                android:layout_marginTop="@dimen/margin_button"
                android:layout_marginStart="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seekBarSize"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_button"
                android:layout_marginTop="8dp"
                android:text="0"
                android:textSize="@dimen/textSize_medium"
                app:layout_constraintStart_toEndOf="@id/size"
                app:layout_constraintTop_toBottomOf="@id/seekBarSize" />

            <SeekBar
                android:id="@+id/seekBarSize"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="@dimen/margin_snackbar"
                android:max="250"
                android:min="100"
                android:progressTint="#E41B1B"
                android:thumbTint="@color/purple_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/size"
                app:layout_constraintTop_toBottomOf="@id/spinnerYear" />

            <SeekBar
                android:id="@+id/seekBarKilos"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="@dimen/margin_snackbar"
                android:progressTint="#E41B1B"
                android:thumbTint="@color/purple_500"
                app:layout_constraintTop_toBottomOf="@id/textViewSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:min="30"
                android:max="250"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/kilos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_kilos"
                android:textSize="@dimen/textSize_medium"
                android:layout_marginTop="@dimen/margin_button"
                android:layout_marginStart="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seekBarKilos"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewKilos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_button"
                android:layout_marginTop="8dp"
                android:text="0"
                android:textSize="@dimen/textSize_medium"
                app:layout_constraintStart_toEndOf="@id/kilos"
                app:layout_constraintTop_toBottomOf="@id/seekBarKilos" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonUpdate"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_button_save_update"
                android:background="@drawable/button_radius_save_button"
                android:fontFamily="serif"
                android:text="@string/save_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinnerDay"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_spinner"
                android:dropDownWidth="100dp"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toBottomOf="@id/textViewDate"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinnerMonth"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_spinner"
                android:dropDownWidth="100dp"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toBottomOf="@id/textViewDate"
                app:layout_constraintBottom_toTopOf="@id/seekBarSize"
                app:layout_constraintStart_toEndOf="@id/spinnerDay" />

            <Spinner
                android:id="@+id/spinnerYear"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_spinner"
                android:dropDownWidth="100dp"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toBottomOf="@id/textViewDate"
                app:layout_constraintStart_toEndOf="@id/spinnerMonth" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>