<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="100dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarProfile">

        <ImageView
            android:id="@+id/userProfile"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:srcCompat="@drawable/ic_profile_person_24" />

    </androidx.cardview.widget.CardView>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="E mail"
            app:errorEnabled="true"
            android:inputType="textEmailAddress|textEmailSubject" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAge"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/age"
            app:errorEnabled="true"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSchool"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutAge">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSchool"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/school"
            app:errorEnabled="true"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutJob"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutSchool">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextJob"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/job"
            app:errorEnabled="true"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:background="@drawable/button_radius_save_button"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_button"
        android:padding="8dp"
        android:fontFamily="serif"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutJob"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Çıkış yap"
        android:background="@drawable/button_radius_exit_button"
        android:layout_marginBottom="8dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_button"
        android:padding="8dp"
        android:fontFamily="serif"
        app:layout_constraintTop_toBottomOf="@id/saveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Information"
        android:visibility="invisible"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_button"
        android:fontFamily="serif"
        android:padding="8dp"
        android:background="@drawable/button_radius_save_button"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutJob"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/updateImageButton"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updateImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Image"
        android:padding="8dp"
        android:visibility="invisible"
        android:layout_marginTop="16dp"
        android:layout_marginStart="170dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_button"
        android:fontFamily="serif"
        android:background="@drawable/button_radius_save_button"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutJob"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>